# aicent

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: demo.rs
src/: brain.rs  lib.rs
