[package]
name = "aicent"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75.0"
authors = ["Aicent Stack Technical Committee <lee@Aicent.com>"]
description = "Sovereign AI Identity & Cognitive Orchestration Protocol [RFC-001]. The Brain Layer."
license = "Apache-2.0"
homepage = "http://aicent.com"
repository = "https://github.com/Aicent-Stack/aicent"
readme = "README.md"

[dependencies]
# ------------------------------------------------------------------------
# [STANDALONE RADIANCE]
# In the GitHub CI environment, we link to the crates.io skeleton versions
# of sibling pillars to verify the local logic of the Brain Layer.
# ------------------------------------------------------------------------
epoekie = "0.1.0-alpha"
rttp    = "0.1.0-alpha"

# --- Metabolic Infrastructure ---
crossbeam    = "0.8"
anyhow       = "1.0"
async-trait  = "0.1"
once_cell    = "1.18"
serde        = { version = "1.0", features = ["derive"] }
tokio        = { version = "1.52.1", features = ["full"] }
tracing      = "0.1"
sha2         = "0.10"

[dev-dependencies]
# Tools for the performance audit in CI
criterion    = "0.5"

[features]
default = ["std", "ethical-compliance"]
std = ["epoekie/std", "rttp/std"]
ethical-compliance = []

# --- Imperial Configuration ---
[lib]
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
