[package]
name = "aicent"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75.0"
authors = ["Aicent Stack Technical Committee <lee@Aicent.com>"]
description = "Sovereign AI Identity & Cognitive Orchestration Protocol [RFC-001]. The Brain Layer."
license = "Apache-2.0"
homepage = "http://aicent.com"
repository = "https://github.com/Aicent-Stack/aicent"
readme = "README.md"

[dependencies]
# ------------------------------------------------------------------------
# [FULL-BLOOD LINKAGE]
# Directing the Brain to the live Soul genome on GitHub to bypass 
# the dormant skeletons on crates.io.
# ------------------------------------------------------------------------
epoekie = { git = "https://github.com/Aicent-Stack/epoekie.git", branch = "main" }
rttp    = { git = "https://github.com/Aicent-Stack/rttp.git", branch = "main" }

# --- Metabolic Infrastructure ---
crossbeam    = "0.8"
anyhow       = "1.0"
async-trait  = "0.1"
once_cell    = "1.18"
serde        = { version = "1.0", features = ["derive"] }
tokio        = { version = "1.52.1", features = ["full"] }
tracing      = "0.1"
sha2         = "0.10"

[dev-dependencies]
criterion    = "0.5"

[features]
default = ["std", "ethical-compliance"]
# std feature is now correctly propagated to the GitHub-sourced epoekie
std = ["epoekie/std", "rttp/std"]
ethical-compliance = []

[lib]
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
