[package]
name = "aicent"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-001: The Brain Layer. Cognitive orchestration, 128-bit intent decomposition, and sovereign identity management for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://aicent.com"
repository = "http://github.com/Aicent-Stack/aicent"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Brain inherits 128-bit identity and ethics from the Soul (RFC-000).
# This link ensures that the cognitive center recognizes only Imperial DNA.
epoekie = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit intents, synaptic maps, and cognitive phases.
serde = { version = "1.0", features = ["derive"] }

# Required for async intent processing and the 10ms Cognitive Fog tax enforcement.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity or ghost testing the Brain logic 
# WILL be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables cognitive shunting and propagates features down the ladder.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Intent IDs, Priority Levels, Deadlines).
# Chronos: 2026 Imperial Calendar Aligned.
